--- a/app.json
+++ b/app.json
@@ -1,30 +1,43 @@
 {
-  "expo": {
-    "name": "EventHub",
-    "slug": "EventHub",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "expo": {
+        "name": "EventHub",
+        "slug": "EventHub",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            }
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": [
+            [
+                "expo-font",
+                {
+                    "fonts": [
+                        "./assets/fonts/AirbnbCereal_W_Bd.otf",
+                        "./assets/fonts/AirbnbCereal_W_Bk.otf",
+                        "./assets/fonts/AirbnbCereal_W_Blk.otf",
+                        "./assets/fonts/AirbnbCereal_W_Lt.otf",
+                        "./assets/fonts/AirbnbCereal_W_Md.otf",
+                        "./assets/fonts/AirbnbCereal_W_XBd.otf"
+                    ]
+                }
+            ]
+        ]
     }
-  }
 }
