--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native/metro-config": "^0.74.81",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
