--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "iconsax-react-native": "^0.0.8",
+    "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
