--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native/metro-config": "^0.74.81",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -24,6 +25,7 @@
     "iconsax-react-native": "^0.0.8",
     "query-string": "^9.0.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
@@ -33,7 +35,8 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
